--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Controle de produção de lanches do postech lanches</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>daniloparkour</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
